Whew. That blew my time budget. Just finished a basic page to list upcoming bouts. learned to avoid trying to resolve too many different levels of data structures inside the html templates. this makes sense because it kind of violates MVC to do that too much. Lost about 2 hours to pig headed attempts at complicated templating. Lost more time to mismanagment of personal stuff that I must handle more gracefully to allow better work time. Proceed to make sure filtering would not have simplified things. Then probably go on to make the page that prompts for predictions on each of a card's bouts (taking the card# passed in the url)

--- a/bring/predict_app/static/predict_app/style.css
+++ b/bring/predict_app/static/predict_app/style.css
@@ -25,3 +25,13 @@ nav {
 	font-size: .7em;
 	font-family: 'Audiowide', cursive;
 }
+
+section {
+	text-align: center;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+a {
+	text-decoration: none;
+}
